<resources>
    <string name="app_name">MyCareer</string>
    <string name="title_activity_home_page">Homepage</string>
    <string name="title_activity_app_info">App Info</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>

    <string name="nan">NaN</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="item_courses">Courses</string>
    <string name="item_homepage">Homepage</string>
    <string name="item_predictions">Predictions</string>
    <string name="item_settings">Settings</string>
    <string name="item_info">App info</string>
    <string name="item_log_out">Log Out</string>
    <string name="item_profiles">Profiles</string>

    <string name="menu_app">Application</string>
    <string name="menu_admin">Admin</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>

    <!-- Empty Fragment -->
    <string name="empty_fragment_courses">No courses to show.\nPress the + button to start.</string>
    <string name="empty_fragment_statistics">No statistics to show.</string>

    <!-- Courses Fragment -->
    <string name="textview_date">date</string>
    <string name="textview_Credits">Credits</string>
    <string name="textview_credit">credit</string>
    <string name="textview_grade">grade</string>
    <string name="textview_name">name</string>
    <string name="textview_laude">Laude</string>

    <!-- Custom Dialog: Add/update course -->
    <string name="add_course">Add new Course!</string>
    <string name="update_course">Update Course!</string>
    <string name="course_name">Course Name*</string>
    <string name="grade">Grade</string>
    <string name="course_credit">Credit*</string>
    <string name="course_date">Date</string>
    <string name="error_field_mandatory">All fields are mandatory.</string>
    <string name="error_number_credits">You have exceeded the credit limit. Change the limit in the settings.</string>
    <string name="entry_exist">The course already exists.</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_update">Update</string>

    <!-- Dialog -->
    <string name="exit_dialog">Exit?</string>
    <string name="pos_answer">Yes</string>
    <string name="neg_answer">No</string>
    <string name="ok_answer">Ok</string>
    <string name="cancel_answer">Cancel</string>
    <string name="dialog_generic_title">title</string>

    <!-- TextView_Dialog -->
    <string name="dialog_title_tot_credits">Insert the total number of credits expected by your study plan.</string>
    <string name="dialog_title_laude_val">Insert the value assigned to a laude in your university (from 30 to 39).</string>

    <!-- app_info Activity -->
    <string name="app_info_title_about">About</string>
    <string name="app_info_about">It\'s me :D ... G.G.</string>
    <string name="app_info_title_general">General</string>
    <string name="app_info_erase_data">Give My Data Back</string>
    <string name="app_info_erase_data_message">"Are you sure you want to delete all the data? :( \n(the process is not reversible)"</string>
    <string name="app_info_title_feedback">Feedback</string>
    <string name="app_info_send_email">Send Email</string>
    <string name="app_info_version">Version 1.0.0</string>
    <string name="choose_email_client">Choose email client</string>

    <!-- settings Activity -->
    <string name="settings_tot_credits">Total credits</string>
    <string name="settings_laude_value">Laude value</string>

    <!-- Custom Dialog Predictions-->
    <string name="custom_dialog_predictions_title">Credits</string>
    <string name="custom_dialog_prediction_summary">Pick the credits for your next exam and check how your average can change</string>

    <!-- profile activity -->
    <string name="title_diagrams">Diagrams</string>
    <string name="title_courses">Courses</string>
    <string name="textview_uid">uid</string>

    <string name="image_transition_name" translatable="false">image_transition_name</string>


</resources>
